CHG: logic changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,7 @@
     android:background="@color/background_soft_blue"
     tools:context=".MainActivity">
 
-    <!-- Hearts layout - Top right corner -->
-    <LinearLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/main_LAY_lives"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,14 +18,14 @@
         android:layout_marginEnd="@dimen/default_margin"
         android:orientation="horizontal">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/main_IMG_heart1"
             android:layout_width="@dimen/heart_size"
             android:layout_height="@dimen/heart_size"
             android:src="@drawable/ic_heart"
             android:contentDescription="@null" />
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/main_IMG_heart2"
             android:layout_width="@dimen/heart_size"
             android:layout_height="@dimen/heart_size"
@@ -34,65 +33,27 @@
             android:src="@drawable/ic_heart"
             android:contentDescription="@null" />
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/main_IMG_heart3"
             android:layout_width="@dimen/heart_size"
             android:layout_height="@dimen/heart_size"
             android:layout_marginStart="@dimen/heart_spacing"
             android:src="@drawable/ic_heart"
             android:contentDescription="@null" />
-    </LinearLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <GridLayout
         android:id="@+id/main_GRID_game"
-        android:layout_below="@id/main_LAY_lives"
         android:layout_width="match_parent"
         android:layout_height="@dimen/game_grid_height"
+        android:layout_below="@id/main_LAY_lives"
+        android:layout_above="@id/main_LAY_controls"
         android:paddingStart="@dimen/button_padding_horizontal"
         android:paddingEnd="@dimen/button_padding_horizontal"
-        android:layout_above="@+id/main_LAY_controls"
         android:columnCount="3"
-        android:rowCount="7">
+        android:rowCount="7" />
 
-        <!-- ROW 0 -->
-        <ImageView android:id="@+id/main_IMG_cell_0_0" style="@style/GameCell" android:contentDescription="@null"/>
-        <ImageView android:id="@+id/main_IMG_cell_0_1" style="@style/GameCell" android:contentDescription="@null"/>
-        <ImageView android:id="@+id/main_IMG_cell_0_2" style="@style/GameCell" android:contentDescription="@null"/>
-
-        <!-- ROW 1 -->
-        <ImageView android:id="@+id/main_IMG_cell_1_0" style="@style/GameCell" android:contentDescription="@null"/>
-        <ImageView android:id="@+id/main_IMG_cell_1_1" style="@style/GameCell" android:contentDescription="@null"/>
-        <ImageView android:id="@+id/main_IMG_cell_1_2" style="@style/GameCell" android:contentDescription="@null"/>
-
-        <!-- ROW 2 -->
-        <ImageView android:id="@+id/main_IMG_cell_2_0" style="@style/GameCell" android:contentDescription="@null"/>
-        <ImageView android:id="@+id/main_IMG_cell_2_1" style="@style/GameCell" android:contentDescription="@null"/>
-        <ImageView android:id="@+id/main_IMG_cell_2_2" style="@style/GameCell" android:contentDescription="@null"/>
-
-        <!-- ROW 3 -->
-        <ImageView android:id="@+id/main_IMG_cell_3_0" style="@style/GameCell" android:contentDescription="@null"/>
-        <ImageView android:id="@+id/main_IMG_cell_3_1" style="@style/GameCell" android:contentDescription="@null"/>
-        <ImageView android:id="@+id/main_IMG_cell_3_2" style="@style/GameCell" android:contentDescription="@null"/>
-
-        <!-- ROW 4 -->
-        <ImageView android:id="@+id/main_IMG_cell_4_0" style="@style/GameCell" android:contentDescription="@null"/>
-        <ImageView android:id="@+id/main_IMG_cell_4_1" style="@style/GameCell" android:contentDescription="@null"/>
-        <ImageView android:id="@+id/main_IMG_cell_4_2" style="@style/GameCell" android:contentDescription="@null"/>
-
-        <!-- ROW 5 -->
-        <ImageView android:id="@+id/main_IMG_cell_5_0" style="@style/GameCell" android:contentDescription="@null"/>
-        <ImageView android:id="@+id/main_IMG_cell_5_1" style="@style/GameCell" android:contentDescription="@null"/>
-        <ImageView android:id="@+id/main_IMG_cell_5_2" style="@style/GameCell" android:contentDescription="@null"/>
-
-        <!-- ROW 6 (Player row) -->
-        <ImageView android:id="@+id/main_IMG_cell_6_0" style="@style/GameCell" android:contentDescription="@null"/>
-        <ImageView android:id="@+id/main_IMG_cell_6_1" style="@style/GameCell" android:contentDescription="@null"/>
-        <ImageView android:id="@+id/main_IMG_cell_6_2" style="@style/GameCell" android:contentDescription="@null"/>
-
-    </GridLayout>
-
-    <!-- Bottom controls - Left and Right buttons spaced apart -->
-    <LinearLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/main_LAY_controls"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -123,5 +84,5 @@
             android:src="@drawable/ic_arrow_right"
             android:contentDescription="@string/move_right"
             app:backgroundTint="@color/purple_300" />
-    </LinearLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </RelativeLayout>
